--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,49 +1,76 @@
 @import url(global.css);
 @import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');
 
-* {
-    background-color: #121212;
-    color: aliceblue;
+body {
+    background: #0d1117;
+    color: #c9d1d9;
+    font-family: "JetBrains Mono", monospace;
+    padding: 2rem;
 }
 
-#cabeçalho h1, #cabeçalho p {
-    font-family: Google Sans, sans-serif;
-    margin-bottom: 0.5em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.terminal-header {
+    margin-bottom: 2rem;
 }
 
-#cabeçalho h1{
-    color: #bb86fc;
-    font-size: 2.5em;
+.cursor {
+    animation: blink 1s steps(2) infinite;
 }
 
-#cabeçalho p{
-    color: #3700b3;
-    font-size: 2em;
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
 }
 
-#nav-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5em;
+.command-hints {
+    color: #6e7681;
+    font-size: 0.8rem;
 }
 
-#nav-bar li {
-    list-style: none;
+.filesystem {
+    margin-top: 2rem;
 }
 
-#nav-bar a {
-    font-size: 1.2em;
-    color: #03dac6;
+.fs-node {
+    margin-bottom: 1rem;
 }
 
-#nav-bar a:hover {
-    color: #018786;
+.folder {
+    background: none;
+    border: none;
+    color: #00ffc6;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
-#sobre-mim {
-    margin: 1em;
+.folder-content {
+    margin-left: 1.5rem;
+    padding-left: 1rem;
+    border-left: 1px dashed #30363d;
+}
+
+.hidden {
+    display: none;
+}
+
+pre,
+.log {
+    background: #010409;
+    padding: 1rem;
+    color: #8b949e;
+}
+
+.file {
+    display: block;
+    background: none;
+    border: none;
+    color: #58a6ff;
+    cursor: pointer;
+    margin-bottom: 0.5rem;
+}
+
+.search {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
 }
